# alethical

./: .env.example  .gitattributes  .gitignore  .railwayignore  CONTRIBUTING.md  Dockerfile.backend  LOCAL_DEV_WINDOWS.md  POOL_D_MANUAL_REGRESSION.md  README.md  REVIEW.md  alembic.ini  docker-compose.yml  frontend-screen-system-design.md  ingestion-pipeline-system-design.md  justfile  oban.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rag-ingestion-system-design.md  railway.json  render.yaml  schema-query-validation.md  v1-scope.md  vercel.json
.claude/: launch.json  settings.json
.github/: PULL_REQUEST_TEMPLATE.md
alembic/: env.py
alethical/: __init__.py  logging.py
docs/: README.md  aesthetics.md  android-prototype-handoff.md  api-cdn-setup.md  backend-api-system-design.md  bill-search-screen-spec.md  data-ingestion-onboarding.md  data-model-relationships.html  db-schema-system-design.md  deployment.md  design-principles.md  frontend-screen-system-design.md  grounded-ask-spec.md  ingestion-pipeline-system-design.md  ios-release.md  legislator-persona-chat-plan.md  legislator-roster-canonical-membership-spec.md  local-dev-windows.md  mvp-redesign-plan.md  persona-rag-chatbot-research.md  product-notes.md  rag-ingestion-system-design.md  rum-read-surface-monitoring.md  schema-query-validation.md  search-bills-plain-english-guide.md  ui-copy-guide.md  v1-scope.md
prototype-output/: bill-sf2483.json  house-member-15518.json  legislator-roster.json  rag-bill-sf1832.json  rag-validation-report.json
prototypes/: mn_ingestion_prototype.py  (+2 more)
(+278 files in other folders)
